# whale

./: .gitignore  CMakeLists.txt  Makefile  ast.hpp  compile.cpp  main.cpp  parser.cpp  parser.hpp  print.cpp  print.hpp  runner.cpp  runner.hpp
tests/: arrays.wha  fib.wha  hello.wha  initial.wha
